--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_DEBUG_POSTFIX "-d")
 
 option(RIFF_MA_DEBUG_OUTPUT "Enable miniaudio debug output" ${PROJECT_IS_TOP_LEVEL})
+option(RIFF_BUILD_EMBEDDER "Build embedder (binary => C++ tool)" ${PROJECT_IS_TOP_LEVEL})
 
 add_subdirectory(ext)
 
@@ -20,8 +21,10 @@ add_executable(${PROJECT_NAME})
 target_link_libraries(${PROJECT_NAME} PRIVATE
   gvdi::gvdi
   capo::capo
-  capo::warnings
   klib::klib
+  capo::warnings
+  klib::klib-ndwerror
+  icons::kenny
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE
