--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
       - name: init
         run: uname -m; sudo apt update -yqq && sudo apt install -yqq ninja-build mesa-common-dev libwayland-dev libxkbcommon-dev wayland-protocols extra-cmake-modules
       - name: configure
-        run: export CXX=g++-14; cmake -S . --preset=default -B build -DGLFW_BUILD_X11=OFF
+        run: export CC=gcc-14; export CXX=g++-14; cmake -S . --preset=default -B build -DGLFW_BUILD_X11=OFF
       - name: build debug
         run: cmake --build build --config=Debug
       - name: build release
