[v0.1.1] Fix invalid iteration, update capo and gvdi (#2)
* capo v2.0.0

* Add `Config`

* Fix invalid iterator ops

* More iterator fixes

* Update klib and capo

* :bug: Update gvdi, fix validation sync error

- Fix flags in presets
- Enable workflow_dispatch
- Update capo to v2.0.1

* Bump version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 name: ci-pr
-on: 
-  pull_request
+on: [pull_request, workflow_dispatch]
 jobs:
   x64-linux-gcc:
     runs-on: ubuntu-latest
@@ -9,11 +8,11 @@ jobs:
       - name: init
         run: uname -m; sudo apt update -yqq && sudo apt install -yqq ninja-build mesa-common-dev libwayland-dev libxkbcommon-dev wayland-protocols extra-cmake-modules
       - name: configure
-        run: export CC=gcc-14; export CXX=g++-14; cmake -S . --preset=default -B build -DGLFW_BUILD_X11=OFF
+        run: cmake -S . --preset=ninja-gcc -B build -DGLFW_BUILD_X11=OFF -DCMAKE_C_COMPILER=gcc-14 -DCMAKE_CXX_COMPILER=g++-14
       - name: build debug
-        run: cmake --build build --config=Debug
+        run: cmake --build build --config=Debug -- -v
       - name: build release
-        run: cmake --build build --config=Release
+        run: cmake --build build --config=Release -- -v
       - name: test debug
         run: cd build && ctest -V -C Debug
       - name: test release
@@ -27,9 +26,9 @@ jobs:
       - name: configure
         run: cmake -S . --preset=ninja-clang -B build -DGLFW_BUILD_X11=OFF
       - name: build debug
-        run: cmake --build build --config=Debug
+        run: cmake --build build --config=Debug -- -v
       - name: build release
-        run: cmake --build build --config=Release
+        run: cmake --build build --config=Release -- -v
       - name: test debug
         run: cd build && ctest -V -C Debug
       - name: test release
@@ -41,11 +40,11 @@ jobs:
       - name: init
         run: uname -m; sudo apt update -yqq && sudo apt install -yqq ninja-build mesa-common-dev libwayland-dev libxkbcommon-dev wayland-protocols extra-cmake-modules
       - name: configure
-        run: export CC=gcc-14; export CXX=g++-14; cmake -S . --preset=default -B build -DGLFW_BUILD_X11=OFF
+        run: cmake -S . --preset=ninja-gcc -B build -DGLFW_BUILD_X11=OFF -DCMAKE_C_COMPILER=gcc-14 -DCMAKE_CXX_COMPILER=g++-14
       - name: build debug
-        run: cmake --build build --config=Debug
+        run: cmake --build build --config=Debug -- -v
       - name: build release
-        run: cmake --build build --config=Release
+        run: cmake --build build --config=Release -- -v
       - name: test debug
         run: cd build && ctest -V -C Debug
       - name: test release
@@ -59,9 +58,9 @@ jobs:
       - name: configure
         run: cmake -S . --preset=ninja-clang -B build -DGLFW_BUILD_X11=OFF
       - name: build debug
-        run: cmake --build build --config=Debug
+        run: cmake --build build --config=Debug -- -v
       - name: build release
-        run: cmake --build build --config=Release
+        run: cmake --build build --config=Release -- -v
       - name: test debug
         run: cd build && ctest -V -C Debug
       - name: test release
@@ -89,9 +88,9 @@ jobs:
       - name: configure
         run: cmake -S . --preset=ninja-clang -B clang
       - name: build debug
-        run: cmake --build clang --config=Debug
+        run: cmake --build clang --config=Debug -- -v
       - name: build release
-        run: cmake --build clang --config=Release
+        run: cmake --build clang --config=Release -- -v
       - name: test debug
         run: cd clang && ctest -V -C Debug
       - name: test release
