Migrate to events, add gsl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
   capo::capo
   klib::klib
   icons::kenny
+  ms::gsl
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE
